# waffle

./: 0001-egl-dri2-implement-platform_null.patch  Android.mk  CMakeLists.txt  Options.cmake
cmake/Modules/: WaffleDefineCompilerFlags.cmake  WaffleFindDependencies.cmake  WafflePrintConfigurationSummary.cmake
examples/: gl_basic.c
include/: CMakeLists.txt
include/waffle/: waffle.h  waffle_gbm.h  waffle_null.h  waffle_surfaceless.h
man/: waffle_display.3.xml  waffle_enum.3.xml  waffle_make_current.3.xml
src/utils/: CMakeLists.txt  eglinfo.c  eglinfo.h  glxinfo.c  glxinfo.h  wflinfo.c  wflinfo.py
src/waffle/: CMakeLists.txt  waffle.def.in
src/waffle/api/: waffle_display.c  waffle_enum.c  waffle_gl_misc.c  waffle_init.c  waffle_window.c
src/waffle/core/: json.c  json.h  wcore_context.h  wcore_display.c  wcore_display.h  wcore_platform.h  wcore_util.c  wcore_util.h
src/waffle/egl/: wegl_context.c  wegl_display.c  wegl_display.h  wegl_platform.c  wegl_platform.h  wegl_util.c  wegl_window.c
src/waffle/gbm/: wgbm_display.c  wgbm_display.h  wgbm_platform.c  wgbm_platform.h  wgbm_window.c
src/waffle/glx/: glx_display.c  glx_display.h  glx_platform.c  glx_window.c
src/waffle/null/: wnull_buffer.c  wnull_buffer.h  wnull_config.c  wnull_config.h  wnull_context.c  wnull_context.h  wnull_display.c  wnull_display.h  wnull_platform.c  wnull_window.c  wnull_window.h
src/waffle/surfaceless/: surfaceless_buffer.c  surfaceless_buffer.h  surfaceless_context.c  surfaceless_display.c  surfaceless_display.h  surfaceless_platform.c  surfaceless_platform.h  (+2 more)
(+2 files in other folders)
